--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -73,6 +73,7 @@
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'project_backlog' %}">Project Backlog</a>
     <a href="{% url 'sprint_board' %}">Sprint Board</a>
+    <a href="{% url 'sprint_backlog' %}">Sprint Backlog</a>
 </div>
 
 <!-- Content -->
