--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -1,35 +1,37 @@
-<!-- sprint_list.html -->
 {% extends "project_task/base.html" %}
+
+{% block title %}
+<title>Sprint Backlog</title>
+{% endblock %}
+
 {% block content %}
-<h1>Sprints</h1>
-<div class="container-fluid" id="listView">
+<h1>Sprint Backlog</h1>
+
+<div class="container-fluid" >
     <table class="table table-striped table-bordered">
         <thead class="thead-light">
             <tr>
-                <th>Sprint</th>
-                <th>Type</th>
-                <th>Priority</th>
-                <th>Story Point</th>
+                <th>Task Name</th>
                 <th>Assignee</th>
-                <th>Status</th>
-                <th>Action</th>
+                <th>Story Points</th>
             </tr>
+
         </thead>
+        
         <tbody id="backlogTable">
+            
             <!-- Rows will be dynamically added here -->
-            {% for task in tasks%}
+            {% for task in tasks%}  
+            {% if task.status == status_title.0 %}
             <tr>
                 <td>{{task.name}}</td>
-                <td>{{task.type}}</td>
-                <td>{{task.priority}}</td>
-                <td>{{task.story_point}}</td>
                 <td>{{task.assignee}}</td>
-                <td>{{task.status}}</td>
-                <td><a href="{% url 'delete_task' task.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this task?')">Delete</a></td>
+                <td>{{task.story_point}}</td>              
+                
             </tr>
+            {% endif %}
             {% endfor %}
         </tbody>
     </table>
 </div>
 {% endblock %}
-
