--- a/project_management_app/register/templates/registration/login.html
+++ b/project_management_app/register/templates/registration/login.html
@@ -1,75 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login Here</title>
+{% extends "project_task/base.html" %}
+{% load crispy_forms_tags %}
+{% load crispy_forms_filters %}
 
-    {% block css %}
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-    {% endblock %}
-</head>
+{% block title %}Login{% endblock %}
 
-<body>
+{% block authentication %}
 <div class="text-center">
-        <!-- New Box Container -->
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <div class="card shadow-lg">
-                        <div class="card-body m-5">
-                            <form class="form-signin" method="POST">
-                                {% csrf_token %}
-                                <!-- Icon and Pleas sign in text -->
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/></svg>
-                                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <!-- New Box Container -->
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card shadow-lg">
+                    <div class="card-body m-5">
+                        <form class="form-signin" method="POST">
+                            {% csrf_token %}
+                            <!-- Icon and Pleas sign in text -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/></svg>
+                            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
-                                <!-- Error message -->
-                                {% if form.errors %}
-                                <div class="alert alert-danger" role="alert">
-                                    Invalid login credentials. Please try again.
+                            <!-- Error message -->
+                            {% if form.errors %}
+                            <div class="alert alert-danger" role="alert">
+                                Invalid login credentials. Please try again.
+                            </div>
+                            {% endif %}
+
+                            <!-- Input fields -->
+                            <div class="d-grid gap-3">
+                                <!-- Username field -->
+                                <div class="form-group">
+                                    <label for="inputUsername" class="sr-only">Username</label>
+                                    <input type="text" id="inputUsername" name="username" class="form-control" placeholder="Username" required autofocus>
                                 </div>
-                                {% endif %}
 
-                                <!-- Input fields -->
-                                <div class="d-grid gap-3">
-                                    <!-- Username field -->
-                                    <div class="form-group">
-                                        <label for="inputUsername" class="sr-only">Username</label>
-                                        <input type="text" id="inputUsername" name="username" class="form-control" placeholder="Username" required autofocus>
+                                <!-- Password field -->
+                                <div class="form-group">
+                                    <label for="inputPassword" class="sr-only">Password</label>
+                                    <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
+                                    <div class="text-start">
+                                        <p><strong><a href="/password_reset" class="text-decoration-none">Forgot password?</a></strong></p>
                                     </div>
-
-                                    <!-- Password field -->
-                                    <div class="form-group">
-                                        <label for="inputPassword" class="sr-only">Password</label>
-                                        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-                                        <div class="text-start">
-                                            <p><strong><a href="#" class="text-decoration-none">Forgot password?</a></strong></p>
-                                        </div>
-                                    </div>
-
-                                    <!-- Sign in button -->
-                                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-
-                                    <!-- Register prompt -->
-                                    <p>Don't have an account? <a href="/register">Sign up</a>.</p>
                                 </div>
-                            </form>
-                        </div>
+
+                                <!-- Sign in button -->
+                                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+
+                                <!-- Register prompt -->
+                                <p>Don't have an account? <a href="/register">Sign up</a>.</p>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
