--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -7,6 +7,7 @@
 {% block content %}
 <h1>Sprint Board</h1>
 
+
 <!-- View options -->
 <label for="view">View:</label>
 <select id="view" onchange="changeView()">
@@ -59,7 +60,8 @@
             {% for task in tasks%}  
             {% if task.status == status_title.0 %}
             <tr data-category="{% for tag in task.tags.all %}{{ tag.name }} {% endfor %}">
-                <td>{{task.name}}</td>
+                <!-- <td>{{task.name}}</td> -->
+                <td><a href="#" data-toggle="modal" data-target="#editTaskModal" data-task-id="{{ task.id }}">{{task.name}}</a></td>
                 <td>{% for tag in task.tags.all %}
                     <span class="badge badge-primary">{{ tag.name }}</span>
                 {% endfor %}
@@ -70,6 +72,40 @@
             </tr>
             {% endif %}
             {% endfor %}
+            <div class="modal fade" id="editTaskModal" tabindex="-1" role="dialog" aria-labelledby="editTaskModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editTaskModalLabel">Edit Task</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <!-- Here, you can display the task details for editing -->
+                            <form>
+                                <div class="form-group">
+                                    <label for="editTaskName">Task Name</label>
+                                    <input type="text" class="form-control" id="editTaskName">
+                                </div>
+                                <div class="form-group">
+                                    <label for="editTaskAssignee">Assignee</label>
+                                    <input type="text" class="form-control" id="editTaskAssignee">
+                                </div>
+                                <div class="form-group">
+                                    <label for="editTaskStoryPoints">Story Points</label>
+                                    <input type="text" class="form-control" id="editTaskStoryPoints">
+                                </div>
+                                <!-- Add more form fields for editing as needed -->
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" id="saveChangesButton">Save Changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
         </tbody>
     </table>
@@ -116,6 +152,7 @@
 
 {% block js %}
     <script>
+        
         function changeView() {
             const selectedView = document.getElementById("view").value;
             if (selectedView === "listView") {
