assignee tasks sprint board

--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -11,9 +11,11 @@
     <table class="table table-striped table-bordered">
         <thead class="thead-light">
             <tr>
-                <th>Task Name</th>
-                <th>Assignee</th>
-                <th>Story Points</th>
+                <th>Sprint</th>
+                <th>Sprint Start</th>
+                <th>Sprint End</th>
+                <th>Action</th>
+
             </tr>
 
         </thead>
