--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -1,39 +1,34 @@
 {% extends "project_task/base.html" %}
 
 {% block title %}
-<title>Sprint Backlog</title>
+    <title>Sprint Backlog</title>
 {% endblock %}
 
 {% block content %}
-<h1>Sprint Backlog</h1>
+    <h1>Sprint Backlog</h1>
 
-<div class="container-fluid" >
-    <table class="table table-striped table-bordered">
-        <thead class="thead-light">
-            <tr>
-                <th>Sprint</th>
-                <th>Sprint Start</th>
-                <th>Sprint End</th>
-                <th>Action</th>
+    <div class="container-fluid">
+        <table class="table table-striped table-bordered">
+            <thead class="thead-light">
+                <tr>
+                    <th>Sprint</th>
+                    <th>Sprint Start</th>
+                    <th>Sprint End</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
 
-            </tr>
-
-        </thead>
-        
-        <tbody id="backlogTable">
-            
-            <!-- Rows will be dynamically added here -->
-            {% for task in tasks%}  
-            {% if task.status == status_title.0 %}
-            <tr>
-                <td>{{task.name}}</td>
-                <td>{{task.assignee}}</td>
-                <td>{{task.story_point}}</td>              
-                
-            </tr>
-            {% endif %}
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+            <tbody id="backlogTable">
+                <!-- Rows will be dynamically added here -->
+                {% for sprint in sprints %}
+                    <tr>
+                        <td>{{sprint.name}}</td>
+                        <td>{{sprint.start_date}}</td>
+                        <td>{{sprint.end_date}}</td>
+                        <td><!-- Action buttons here (maybe delete sprints if needed)... --></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
