Modified graph feature

--- a/project_management_app/project_task/templates/project_task/create_graph.html
+++ b/project_management_app/project_task/templates/project_task/create_graph.html
@@ -88,8 +88,7 @@
             }
         })
         // Accumulation of effort graph logic
-        var accCtx = document.getElementById('accumulationChart').getContext('2d');
-        //var accumulatedEffort = []; // Data will be received from backend
+        var accCtx = document.getElementById('accumulationChart').getContext('2d');d
         var myAccumulationChart = new Chart(accCtx, {
             type: 'line',
             data: {
