--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1>Sprint Backlog</h1>
 
-<div class="container-fluid" >
+<div class="container-fluid">
     <table class="table table-striped table-bordered">
         <thead class="thead-light">
             <tr>
@@ -15,25 +15,55 @@
                 <th>Sprint Start</th>
                 <th>Sprint End</th>
                 <th>Action</th>
-
             </tr>
-
         </thead>
         
         <tbody id="backlogTable">
-            
             <!-- Rows will be dynamically added here -->
-            {% for task in tasks%}  
-            {% if task.status == status_title.0 %}
+            {% for sprint in active_sprints %}
             <tr>
-                <td>{{task.name}}</td>
-                <td>{{task.assignee}}</td>
-                <td>{{task.story_point}}</td>              
-                
+                <td>{{sprint.name}}</td>
+                <td>{{sprint.start_date}}</td>  
+                <td>{{sprint.end_date}}</td> 
+                <td>
+                    {% if sprint.is_completed %}
+                        <span class="text-success">Completed</span>
+                    {% else %}
+                        <a href="#archiveSprint{{ sprint_id }}" class="archive" data-toggle="modal"><i class="btn btn-success" data-toggle="tooltip" title="Archive">Archive</i></a>
+                    {% endif %}
+                </td>
             </tr>
-            {% endif %}
             {% endfor %}
         </tbody>
     </table>
 </div>
+
+{% if sprint_completed %}
+    <div class="alert alert-success">
+        This sprint has been completed and is archived.
+    </div>
+{% else %}
+    <div id="archiveSprint{{ sprint_id }}" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="{% url 'archive_sprint' sprint_id %}">
+                    {% csrf_token %}
+                    <div class="modal-header">
+                        <h4 class="modal-title">Archive Sprint</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to archive this Sprint?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-danger" value="Archive">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+{% endif %}
+
+
 {% endblock %}
