--- a/project_management_app/project_task/templates/project_task/base.html
+++ b/project_management_app/project_task/templates/project_task/base.html
@@ -15,6 +15,66 @@
           rel="stylesheet"/>
     <!-- Custom CSS -->
     <style>
+        
+        body {
+            font-size: 16px;
+        }
+
+        h1 {
+            font-size: 3em;
+        }
+
+        p {
+            font-size: 1.5em;
+        }
+
+        /* Dropdown Button */
+        .dropdown {
+            position: absolute;
+            top: 0;
+            right: 0;
+            display: inline-block;
+        }
+
+        /* Style the button */
+        .dropbtn {
+            background-color: #3498db;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 10px;
+        }
+
+        /* Style the dropdown content */
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        /* Style the dropdown links */
+        .dropdown-content button {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            
+        }
+
+        /* Change link color on hover */
+        .dropdown-content button:hover {
+            background-color: #ddd;
+        }
+
+        /* Show the dropdown content when the button is hovered */
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+        
         .sidenav {
             height: 100%;
             width: 160px;
@@ -55,7 +115,7 @@
 <!-- Sidenav -->
 <div class="sidenav">
     <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'project_backlog' %}">Project Backlog</a>
+    <a href="{% url 'project_backlog' %}">Project Backlog</a>    
 </div>
 
 <!-- jQuery Library -->
@@ -64,24 +124,43 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<!-- Bootstrap's JavaScript -->
+        <!-- Bootstrap's JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-<!-- Select2 JS and initialization -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
-
+        <!-- Select2 JS and initialization -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+        
 <!-- Content -->
 <div id="content" , name="content" class="main">
+    <div class="dropdown">
+        <button class="dropbtn">Fontsize</button>
+        <div class="dropdown-content">
+            <button id="small-font" onclick="changeFontSize('small')">Small</button>
+            <button id="medium-font" onclick="changeFontSize('medium')">Medium</button>
+            <button id="large-font" onclick="changeFontSize('large')">Large</button>
+        </div>
+    </div>
     {% if user.is_authenticated %}
         {% block content %}
         {% endblock %}
+
     {% else %}
     <p>Login <a href="/login">Here</a></p>
     {% endif %}
     
+    <!-- <div class="font-size-controls">
+        <button id="small-font" onclick="changeFontSize('small')">Small</button>
+        <button id="medium-font" onclick="changeFontSize('medium')">Medium</button>
+        <button id="large-font" onclick="changeFontSize('large')">Large</button>
+    </div> -->
+   
 </div>
-
+<script>
+    function changeFontSize(fontSize) {
+        document.body.style.fontSize = fontSize;
+    }
+</script>
 {% block js %}{% endblock %}
 </body>
 </html>
