--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -97,21 +97,28 @@
                         <div class="modal-body">
                             <!-- Here, you can display the task details for editing -->
                             <form>
-
                                 <div class="form-group">
                                     <label for="editTaskAssignee">Assignee</label>
                                     <input type="text" class="form-control" id="editTaskAssignee">
+                                    <input type="hidden" id="assigneeField" name="assignee">
                                 </div>
-
+                                <div class="form-group">
+                                    <label for="editTaskHours">Log Hours</label>
+                                    <input type="number" class="form-control" id="editTaskHours" min="0">
+                                </div>
+                                <div class="form-group">
+                                    <label for="editTaskTotalHours">Total Hours</label>
+                                    <input type="text" class="form-control" id="editTaskTotalHours" readonly>
+                                </div>
                             </form>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary" id="saveChangesButton">Save Changes</button>
+                            <button type="button" class="btn btn-primary" id="saveChangesButton" data-dismiss="modal">Save Changes</button>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>            
         {% endfor %}
         </tbody>
     </table>
@@ -190,6 +197,24 @@
 
 {% block js %}
 <script>
+
+        $(document).ready(function () {
+            var logHoursInput = $("#editTaskHours");
+            var totalHoursInput = $("#editTaskTotalHours");
+
+            logHoursInput.on("input", function () {
+                var loggedHours = parseFloat(logHoursInput.val()) || 0;
+                totalHoursInput.val(loggedHours);
+            });
+
+            $("#saveChangesButton").on("click", function () {
+                var assigneeInput = $("#editTaskAssignee");
+                var assigneeValue = assigneeInput.val();
+
+                $("#assigneeField").val(assigneeValue);
+            });
+        });
+
 
         function changeView() {
             const selectedView = document.getElementById("view").value;
