--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -9,7 +9,7 @@
 {% block extra_styles %}
 <style>
     .tags-container {
-        max-height: 1.5em; /* This might need adjustment based on your badge height */
+        max-height: 1.5em;
         overflow: hidden;
         position: relative;
     }
@@ -28,6 +28,43 @@
 
 {% block content %}
 <h1>Project Backlog</h1>
+
+<!-- Button to trigger the "Create New Sprint" modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewSprint">
+    Create Sprint
+</button>
+
+<!-- Modal for creating a new sprint -->
+<div class="modal fade" id="createNewSprint" tabindex="-1" role="dialog" aria-labelledby="sprintModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form id="sprintForm" method="POST">
+                {% csrf_token %}
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h5 class="modal-title" id="sprintModalLabel">Create New Sprint</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <div class="d-grid gap-3 text-start">
+                        {{ sprint_form.name| as_crispy_field}}
+                        {{ sprint_form.start_date| as_crispy_field}}
+                        {{ sprint_form.end_date| as_crispy_field}}
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <!-- Action buttons -->
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save Sprint</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 <!-- Alert Message container -->
 <div id="messages-container"></div>
@@ -101,11 +138,12 @@
 {% endblock %}
 
 
-
-{% block js %}
-
 <!-- Custom JavaScript -->
+{% block js %}
 <script>
+    $('#createNewSprint').on('shown.bs.modal', function () {
+    $('#sprintForm input:first').trigger('focus');
+    });
     // This is the base URL for the edit and delete task views
     const editTaskBaseUrl = "{% url 'edit_task' task_id=0 %}".replace("0/", "");
     const deleteTaskBaseUrl = "{% url 'delete_task' task_id=0 %}".replace("0/", "");
