--- a/project_management_app/project_task/templates/project_task/create_graph.html
+++ b/project_management_app/project_task/templates/project_task/create_graph.html
@@ -49,18 +49,33 @@
         });
     // Burndown Chart graph logic
         var ctx = document.getElementById('burndownChart').getContext('2d')
+        var actualData = {{ remaining_effort|safe }};
+        var idealData = [100, 80, 60, 40, 20, 0];
         var myChart = new Chart(ctx, {
             type: 'line',
             data: {
                 labels: {{ days|safe }},
-                datasets:[{
-                    label: 'Remaining Effort',
-                    data: {{ remaining_effort|safe }},
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderColor: 'rgba(75, 192, 192,1)',
-                    borderWidth: 1
-                }]
+                datasets:[
+                    {
+                        label: 'Actual Remaining Effort',
+                        data: actualData,
+                        backgroundColor: 'rgba(75, 192, 192, 0.2)',//   Blue
+                        borderColor: 'rgba(75, 192, 192,1)',
+                        borderWidth: 1,
+                        fill : 1, // Fill the gap between the two graphs
+                    },
 
+                    {
+                        label:'Ideal Remaining Effort',
+                        //Hard coded data for now until we have set up live data
+                        data: idealData,
+                        backgroundColor: 'rgba(255, 0, 0, 0.2)', // Red
+                        borderColor: 'rgba(255, 0, 0, 1)',
+                        borderWidth: 1,
+                        fill : -1,
+                    },
+
+                ]
             },
             options: {
                 scales: {
@@ -88,7 +103,7 @@
             }
         })
         // Accumulation of effort graph logic
-        var accCtx = document.getElementById('accumulationChart').getContext('2d');d
+        var accCtx = document.getElementById('accumulationChart').getContext('2d');
         var myAccumulationChart = new Chart(accCtx, {
             type: 'line',
             data: {
