--- a/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
@@ -1,11 +1,7 @@
 {% extends "project_task/base.html" %}
 
-{% block title %}
-    <title>Sprint Backlog</title>
-{% endblock %}
-
 {% block content %}
-    <h1>Sprint Backlog</h1>
+<h1>Archived Sprints</h1>
 
 <div class="container-fluid">
     <table class="table table-striped table-bordered">
@@ -14,24 +10,20 @@
                 <th>Sprint</th>
                 <th>Sprint Start</th>
                 <th>Sprint End</th>
-                <th>Action</th>
             </tr>
         </thead>
         
         <tbody id="backlogTable">
             <!-- Rows will be dynamically added here -->
-            {% for sprint in sprint_backlog %}
+            {% for sprint in sprint_backlog_archived %}
             <tr>
                 <td><a href="{% url 'redirect_to_sprint_board' sprint.id %}">{{ sprint.name }}</a></td>
                 <td>{{sprint.start_date}}</td>  
                 <td>{{sprint.end_date}}</td> 
-                <td>
-                    <a href="{% url 'archive_sprint_backlog' sprint.id %}" class="btn btn-success">Archive Sprint</a>
-                </td>
+
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
-
 {% endblock %}
