--- a/project_management_app/project_task/templates/project_task/sprint_board.html
+++ b/project_management_app/project_task/templates/project_task/sprint_board.html
@@ -218,6 +218,7 @@
         // Update the modal form fields
         $('#editTaskModal #name').val(taskName);
         $('#editTaskModal #assignee').val(taskAssignee);
+        $('#editTaskModal #status').val(taskStatus); 
     });
 
     // Event listener for submitting the edit task form
