--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -34,6 +34,7 @@
 
 
 <!-- View options and Create New Task button -->
+{% include "project_task/pb_create_new_task.html" %}
 {% include "project_task/pb_view_filtersort_button.html" %}
 
 <!-- View templates -->
