--- a/project_management_app/project_task/templates/project_task/sprint_backlog.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>Sprint Backlog</h1>
 
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 20px;">
     <table class="table table-striped table-bordered">
         <thead class="thead-light">
             <tr>
