--- a/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Archived Sprints</h1>
 
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 20px;">
     <table class="table table-striped table-bordered">
         <thead class="thead-light">
             <tr>
