--- a/project_management_app/project_task/templates/project_task/create_graph.html
+++ b/project_management_app/project_task/templates/project_task/create_graph.html
@@ -7,21 +7,95 @@
 {% endblock %}
 
 {% block extra_styles %}
+    <style>
+        /* h1 border for dark theme */
+        body.dark-theme h1 {
+        border-bottom: 2px solid #fff;
+        }
+        /* Light theme */
+        body.light-theme {
+            background-color: #ffffff;
+            color: #333333;
+        }
+
+        body.light-theme .thead-light {
+            background-color: white;
+            color: black;
+        }
+
+        body.light-theme .thead-dark {
+            background-color: white;
+            color: black;
+        }
+
+        /* Theme toggle button in light theme */
+        body.light-theme #theme-toggle {
+        background-color: #444;
+        color: #fff;
+        }
+
+        body.light-theme #theme-toggle:hover {
+        background-color: #555;
+        }
+
+        /* Dark theme */
+        body.dark-theme {
+            background-color: #333333;
+            color: #ffffff;
+        }
+
+        body.dark-theme .thead-light,
+        body.dark-theme .thead-dark {
+            background-color: #343a40;
+            color: white;
+        }
+        /* Theme toggle button in dark theme */
+        body.dark-theme #theme-toggle {
+            background-color: #ffffff;
+            color: #333333;
+        }
+
+        body.dark-theme #theme-toggle:hover {
+            background-color: #dddddd;
+        }
+        /* Theme toggle button */
+        #theme-toggle {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1001;
+            padding: 10px 20px;
+            cursor: pointer;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        #theme-toggle:hover {
+            background-color: #555;
+        }
+        </style>
 {% endblock %}
 
 {% block content %}
     <h1>Create Graph</h1>
-    <h2 id="graphTitle">Choose a Chart</h2>
+   <!-- Graph View Dropdown -->
+    <label for="graphView"></label>
+    <select id="graphView" onchange="changeGraphView()">
+        <option value="" selected disabled>Select a chart...</option>
+        <option value="burndownChart">Burndown Chart</option>
+        <option value="accumulationChart">Accumulation of Efforts</option>
+    </select>
 
-    <!-- Toggle buttons for the charts -->
-    <button id="showBurndown">Show Burndown Chart</button>
-    <button id="showAccumulation">Show Accumulation Chart</button>
+    <!-- Toggle button for Light/Dark themes -->
+    <button id="theme-toggle">Light/Dark Theme</button>
 
-    <h3 id="burndownTitle" style="display: none;">Burndown Chart</h3>
+    <h2 id="burndownTitle" style="display: none;">Burndown Chart</h2>
     <canvas id="burndownChart" width="400" height="200" {% if not show_burndown %}style="display: none;"{% endif %}></canvas>
 
 
-    <h3 id="accumulationTitle" style="display: none;">Accumulation of Efforts Chart</h3>
+    <h2 id="accumulationTitle" style="display: none;">Accumulation of Efforts Chart</h2>
     <canvas id="accumulationChart" width="400" height="200" style="display: none;"></canvas>
 
 {% endblock %}
@@ -31,22 +105,22 @@
     <!-- Chart.js Library-->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
+        function changeGraphView() {
+            const selectedValue = document.getElementById("graphView").value;
+
+            if (selectedValue === "burndownChart") {
+                document.getElementById("burndownChart").style.display = "block";
+                document.getElementById("burndownTitle").style.display = "block";
+                document.getElementById("accumulationTitle").style.display = "none";
+                document.getElementById("accumulationChart").style.display = "none";
+            } else if (selectedValue === "accumulationChart") {
+                document.getElementById("burndownChart").style.display = "none";
+                document.getElementById("burndownTitle").style.display = "none";
+                document.getElementById("accumulationTitle").style.display = "block";
+                document.getElementById("accumulationChart").style.display = "block";
+            }
+        }
         document.addEventListener("DOMContentLoaded", function() {
-
-        // Toggle Logic for Charts
-        document.getElementById("showBurndown").addEventListener("click", function() {
-            document.getElementById("burndownChart").style.display = "block";
-            document.getElementById("burndownTitle").style.display = "block";
-            document.getElementById("accumulationTitle").style.display = "none";
-            document.getElementById("accumulationChart").style.display = "none";
-        });
-
-        document.getElementById("showAccumulation").addEventListener("click", function() {
-            document.getElementById("burndownChart").style.display = "none";
-            document.getElementById("burndownTitle").style.display = "none";
-            document.getElementById("accumulationTitle").style.display = "block";
-            document.getElementById("accumulationChart").style.display = "block";
-        });
     // Burndown Chart graph logic
         var ctx = document.getElementById('burndownChart').getContext('2d')
         var actualData = {{ remaining_effort|safe }};
@@ -139,6 +213,24 @@
                     }
                 }
             }
-        })});
+        })})
+        // Toggle between light and dark themes
+        document.getElementById('theme-toggle').addEventListener('click', function() {
+                let body = document.body;
+
+                if (body.classList.contains('light-theme')) {
+                    body.classList.remove('light-theme');
+                    body.classList.add('dark-theme');
+                    localStorage.setItem('theme', 'dark-theme');
+                } else {
+                    body.classList.remove('dark-theme');
+                    body.classList.add('light-theme');
+                    localStorage.setItem('theme', 'light-theme');
+                }
+            });
+
+            // Set the default theme of page to the 'light theme'
+            let storedTheme = localStorage.getItem('theme') || 'light-theme';
+            document.body.classList.add(storedTheme);
     </script>
 {% endblock %}
