--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -23,6 +23,73 @@
         padding-left: 10px;
         pointer-events: none; /* Prevent the pseudo-element from being clickable */
     }
+        /* h1 border for dark theme */
+    body.dark-theme h1 {
+    border-bottom: 2px solid #fff;
+    }
+    /* Light theme */
+    body.light-theme {
+        background-color: #ffffff;
+        color: #333333;
+    }
+
+    body.light-theme .thead-light {
+        background-color: white;
+        color: black;
+    }
+
+    body.light-theme .thead-dark {
+        background-color: white;
+        color: black;
+    }
+
+    /* Theme toggle button in light theme */
+    body.light-theme #theme-toggle {
+    background-color: #444;
+    color: #fff;
+    }
+
+    body.light-theme #theme-toggle:hover {
+    background-color: #555;
+    }
+
+    /* Dark theme */
+    body.dark-theme {
+        background-color: #333333;
+        color: #ffffff;
+    }
+
+    body.dark-theme .thead-light,
+    body.dark-theme .thead-dark {
+        background-color: #343a40;
+        color: white;
+    }
+    /* Theme toggle button in dark theme */
+    body.dark-theme #theme-toggle {
+        background-color: #ffffff;
+        color: #333333;
+    }
+
+    body.dark-theme #theme-toggle:hover {
+        background-color: #dddddd;
+    }
+    /* Theme toggle button */
+    #theme-toggle {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1001;
+        padding: 10px 20px;
+        cursor: pointer;
+        background-color: #444;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+    #theme-toggle:hover {
+        background-color: #555;
+    }
 </style>
 {% endblock %}
 
