--- a/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
+++ b/project_management_app/project_task/templates/project_task/sprint_backlog_archived.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h1>Archived Sprints</h1>
+<button class="btn btn-info" onclick="showHelp()">Help</button>
 
 <div class="container-fluid" style="margin-top: 20px;">
     <table class="table table-striped table-bordered">
@@ -26,4 +27,10 @@
         </tbody>
     </table>
 </div>
+
+<script>
+    function showHelp() {
+        alert("This page displays a table of all sprints that have been archived, including when the sprint started and ended.");
+    }
+</script>
 {% endblock %}
